--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
 <div class="apps">
    <a href="POSTVTA3/cortes_pendientesGALLO.html"> Corte Pendiente GAllo </a>
   </div>
-
+<div class="apps">
+   <a href="PEDIDOPISO/PEDIDOPISO.html"> TOMA DE PEDIDOS MATRIZ</a>
+  </div>
   
   <footer>
     Powered by <b>PROVSOFT</b>
