--- a/PEDIDOPISO/PEDIDOPISO.html
+++ b/PEDIDOPISO/PEDIDOPISO.html
@@ -153,7 +153,7 @@
     <section>
       <label for="buscarProducto">Producto:</label>
       <input type="text" id="buscarProducto" placeholder="Escribe para buscar...">
-      <ul id="resultados"></ul>const asignado = document.getElem
+      <ul id="resultados"></ul>
     </section>
 
     <!-- 📦 Cantidad -->
@@ -273,7 +273,6 @@
       }
     });
 
-ocument.getElementById("guardar").addEventListener("click", async (
         msg.textContent = "✅ Pedido guardado correctamente.";
         msg.style.color = "green";
 
@@ -336,5 +335,6 @@ document.getElementById("agregar").addEventListener("click", () => {
   </script>
 </body>
 </html>
+
 
 
