--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
 <div class="apps">
    <a href="PEDIDOPISO/PEDIDOPISO.html"> TOMA DE PEDIDOS MATRIZ</a>
   </div>
+<div class="apps">
+   <a href="POSVTA4/POSV4PASS.html"> POS V4 GENERAL </a>
+  </div>
   
   <footer>
     Powered by <b>PROVSOFT</b>
