--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -312,7 +312,7 @@
   </div> <!-- /modal-card -->
 </div> <!-- /modalCobro -->
 
-<!-- ⚙️ BLOQUE 5: SCRIPT PRINCIPAL (FIREBASE + LÓGICA POS) -->
+// ⚙️ BLOQUE 5: SCRIPT PRINCIPAL (FIREBASE + LÓGICA POS)
 <script type="module">
 "use strict";
 
