--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -541,8 +541,8 @@ function calcularTotales(descPorc = 0) {
   };
 }
 
-<!-- ⚙️ BLOQUE 5 (continuación): INTERFAZ, COBRO, IMPRESIÓN Y TELEGRAM -->
 <script type="module">
+// ⚙️ BLOQUE 5 (continuación): INTERFAZ, COBRO, IMPRESIÓN Y TELEGRAM
 
 /* ===========================================================
    🖥️ SECCIÓN 9: RENDER Y ACTUALIZACIÓN VISUAL DEL CARRITO
